src/styles/app.scss
@import 'bourbon';
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic);

$frameBorder: #222;

* {
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Open Sans', $helvetica;
    overflow: hidden;
    div#map {
        position: absolute;
        top: 20px;
        left: 10px;
        right: 0;
        bottom: 200px;
        width: 100%;
        border: 2px solid $frameBorder;
        border-width: 2px 0 0 2px;
        &.rectzoom {
            cursor: crosshair;
        }
        div.mapboxgl-popup {
            width: 60px;
            height: 100px;
            margin-top: -91px;
            margin-left: 3px;
            div.icon {
                height: 52px;
                width: 52px;
                background-color: #19d1e7;
                border-radius: 50%;
                padding-left: 2px;
                padding-top: 2px;
                img {
                    height: 50px;
                    width: 50px;
                    border-radius: 50%;
                }
            }
            div.connector {
                width: 1px;
                background-color: #19d1e7;
                height: 10px;
                margin-top: 0px;
                margin-left: 26px;
            }
            div.dot {
                width: 9px;
                height: 9px;
                margin-left: 22px;
                background-color: #19d1e7;
                border-radius: 50%;
            }
        }
    }
    div#timeline {
        position: absolute;
        bottom: 0;
        height: 200px;
        width: 100%;
        background-color: white;
        box-shadow: 0px -3px 8px rgba(0, 0, 0, 0.2);
        .axis path, .axis line {
            fill: none;
            stroke: #a2b3b7;
            stroke-width: 1;
            shape-rendering: crispEdges;
        }
        .tick line {
            color: #a2b3b7;
        }
        .tick text {
            fill: rgba(162, 179, 183, 1);
            stroke: rgba(162, 179, 183, 0.6);
            font-size: 0.8em;
        }
        rect.marker, circle.marker {
            fill: rgba(209, 209, 209, 0.7);
            stroke: rgba(209, 209, 209, 0.7);
            &.active {
                fill: rgba(45, 198, 224, 0.7);
                stroke: rgba(45, 198, 224, 0.7);
            }
        }
        line.marker {
            stroke: #2dc6e0;
            stroke-width: 1;
            &.inactive {
                display: none;
            }
        }
        div.annotation {
            position: absolute;
            top: -22px;
            line-height: 20px;
            span.text {
                color: #ffffff;
                padding: 1px 5px;
                font-size: 0.8em;
                margin-left: -50%;
                background-color: #2dc6e0;
            }
            &.inactive {
                display: none;
            }
        }
    }
    div#sidepane {
        div#sidepaneButton {
            height: 50px;
            width: 50px;
            border-radius: 50%;
            position: absolute;
            top: 30px;
            right: 20px;
            background: white;
            line-height: 42px;
            text-align: center;
            font-weight: bold;
            font-size: 1.9em;
        }
        div#eventpane, div#eventspane {
            position: absolute;
            top: 10px;
            right: 5px;
            border: 2px solid $frameBorder;
            border-width: 2px 2px 0 0;
            background: #ffffff;
            width: 320px;
            bottom: 200px;
            overflow-y: scroll;
            box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
            &.closed {
                display: none;
            }
            span.close {
                float: right;
                background-color: black;
                color: white;
                font-size: 1em;
                padding: 2px 7px;
                border-radius: 50%;
                font-weight: bold;
                margin: 4px;
            }
            img {
                width: 100%;
                height: 214px;
            }
            div.content {
                padding: 25px;
                h3.project {
                    color: #ADBEC7;
                    font-size: 14px;
                }
                h2.title {
                    font-size: 20px;
                }
                div.place {

                }
                div.date {
                    font-size: 14px;
                    color: #5D8599;
                    font-style: italic;
                }
                hr {
                    display: block;
                    height: 1px;
                    border: 0;
                    border-top: 1px solid #5D8599;
                    margin: 0.5em 0;
                    padding: 0;
                }
            }
        }
    }
}

